# glc_v1

./: CLAIMS.md  README.md  VALIDATION.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
glc/: __init__.py  cli.py  config.py  db.py  main.py
glc/audit/: store.py
glc/channels/: __init__.py  base.py  envelope.py  registry.py
glc/channels/catalogue/discord/: adapter.py  schemas.py
glc/channels/catalogue/gmail/: adapter.py  schemas.py
glc/channels/catalogue/imap/: adapter.py  schemas.py
glc/channels/catalogue/line/: adapter.py  schemas.py
glc/channels/catalogue/local_mic/: adapter.py  schemas.py
glc/channels/catalogue/matrix/: adapter.py  schemas.py
glc/policy/: engine.py  schemas.py
glc/routes/: channels.py  chat.py  control.py  speak.py  transcribe.py
glc/security/: allowlists.py  pairing.py  rate_limits.py  trust_level.py
glc/voice/stt/: __init__.py  base.py  router.py
glc/voice/tts/: __init__.py  base.py  router.py
scripts/: check_pr_boundaries.py  scorecard.py  validate_claims.py  validate_envelope.py  validate_policy.py
tests/: conftest.py  test_allowlists_trust.py  test_audit_log.py  test_control_plane.py  test_envelope.py  test_pairing.py  test_policy_engine.py  test_rate_limits.py  test_registry.py  test_transcribe_route.py  test_v9_compat.py  test_voice_routing.py
tests/channels/: conftest.py  test_discord.py  test_gmail.py  test_imap.py  test_line.py  test_local_mic.py  test_matrix.py  test_signal.py  test_slack.py  test_teams.py  test_telegram.py  test_twilio_sms.py  test_twilio_voice.py  test_webhook.py  test_webui.py  test_whatsapp.py
tests/channels/mocks/: discord_mock.py  gmail_mock.py  imap_mock.py  line_mock.py  local_mic_mock.py  matrix_mock.py  signal_mock.py  slack_mock.py  teams_mock.py  telegram_mock.py  twilio_sms_mock.py  twilio_voice_mock.py  webhook_mock.py  webui_mock.py  whatsapp_mock.py
tests/voice/: conftest.py
tests/voice/stt/: test_gemini_live.py  test_groq_whisper.py  test_whisper_cpp.py
tests/voice/tts/: test_cartesia.py  test_elevenlabs.py  test_gemini_live.py  test_kokoro.py  test_system_fallback.py
(+51 files in other folders)
